[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fuentes/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/SongSelect.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Cargando01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Cargando02.png" type="Texture" id=4]
[ext_resource path="res://BotonesMenu/NameSongSelect.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.486275, 0, 1 )
border_width_bottom = 5
border_color = Color( 1, 0.486275, 0, 1 )
corner_detail = 12

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.58667
margin_right = 1.58667
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="PopupDialog" parent="."]
anchor_left = 0.18
anchor_top = 0.16
anchor_right = 0.9
anchor_bottom = 0.803
margin_left = -0.320007
margin_top = -7.62939e-06
margin_right = 0.399963
margin_bottom = 0.199982

[node name="Analizando" type="Label" parent="WindowDialog"]
anchor_left = 0.178
anchor_top = 0.805
anchor_right = 0.843
anchor_bottom = 0.869
margin_left = -0.0123749
margin_top = -0.135406
margin_right = 0.21759
margin_bottom = 0.160583
custom_fonts/font = SubResource( 1 )
text = "Se está analizando la canción"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="WindowDialog"]
position = Vector2( 368.035, 148.514 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.023
anchor_top = 0.05
anchor_right = 0.977
anchor_bottom = 0.95
margin_left = 0.448
margin_top = 1.90735e-06
margin_right = -936.448
margin_bottom = -500.0
rect_min_size = Vector2( 976, 540 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_right = 976.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 976.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )
custom_styles/separator = SubResource( 3 )

[node name="Tracklist" type="ItemList" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 976.0
margin_bottom = 394.0
rect_min_size = Vector2( 0, 250 )
custom_fonts/font = SubResource( 4 )
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 398.0
margin_right = 976.0
margin_bottom = 420.0

[node name="BotonVolver" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 108.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
text = "VOLVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonEmpezar" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 236.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 6 )
action_mode = 0
text = "EMPEZAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 345.0
margin_bottom = 22.0
text = "Mostrar Popup"
[connection signal="about_to_show" from="WindowDialog" to="." method="_on_WindowDialog_about_to_show"]
[connection signal="item_selected" from="VBoxContainer/Tracklist" to="." method="_on_Tracklist_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BotonVolver" to="." method="_on_BotonVolver_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BotonEmpezar" to="." method="_on_BotonEmpezar_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
